--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -214,6 +214,58 @@ footer {
     box-shadow: 4px 4px 8px rgba(#000, .3);
     overflow: hidden;
 
+    &-list {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        overflow-x: scroll;
+        z-index: 4;
+        padding: 10px 0 10px 0;
+
+        &::-webkit-scrollbar {
+            height: 5px !important;
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: rgba($primary-color-dark, .5);
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: $text-color;
+        }
+
+        table {
+            width: 150%;
+            border-collapse: collapse;
+            text-shadow: 1px 1px 5px rgba(#000, 0.3);
+
+            tr {
+                border-bottom: 1px solid $text-color;
+                
+            } 
+
+            td {
+                text-align: center;
+                padding: 10px;
+                // border: 1px solid $text-color;
+            }
+        }
+    }
+
+    .add-btn {
+        visibility: hidden;
+        opacity: 0;
+        transition: all .4s ease-in;
+        z-index: 6;
+
+        &-show {
+            visibility: visible;
+            opacity: 1;
+        }
+    }
+
     div.new-order {
         background-color: rgba($primary-color-light, 1);
         position: absolute;
